--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -128,11 +128,11 @@
             {{- /* STAKING */ -}}
             <div id="stakingBox" class="position-relative m-3 w-100 d-flex align-items-stretch">
               <div class="d-flex flex-column align-items-stretch flex-grow-1">
-                <div class="flex-center fs24 brdrbottom px-2">
-                  <span class="ico-ticket me-2 fs20"></span>Staking
+                <div class="flex-center fs24 brdrbottom px-2 py-1">
+                  <span class="ico-ticket me-2"></span>Staking
                 </div>
                 <div id="stakingSummary" class="d-flex align-items-stretch flex-grow-1">
-                  <div class="d-flex flex-column align-items-stretch fs14 flex-grow-1 p-3">
+                  <div class="d-flex flex-column align-items-stretch justify-content-center fs14 flex-grow-1 px-3">
                     <div class="d-flex justify-content-between align-items-stretch">
                       <div class="flex-center grey">Active tickets</div>
                       <div id="stakingTicketCount" class="flex-center demi"></div>
@@ -169,9 +169,12 @@
                     </div>
                   </div>
                 </div>
-                <div id="stakingErr" class="fs16 p-2 errcolor"></div>
+                <div id="stakingErr" class="text-center fs16 p-2 errcolor"></div>
+                <div id="stakingRpcSpvMsg" class="flex-center fs16 py-1 px-2">
+                  <span class="ico-info fs12 me-2"></span>Staking unavailable for RPC wallets using SPV
+                </div>
                 {{- /* PURCHASE TICKETS */ -}}
-                <div id="purchaseTicketsBox" class="w-100 d-flex align-items-stretch brdrtop">
+                <div id="purchaseTicketsBox" class="w-100 d-flex align-items-stretch brdrtop fs18">
                   <div id="purchaseTicketsBttn" class="hoverbg pointer flex-center flex-grow-1 brdrright p-2">
                     <span><span class="ico-ticket me-1"></span> Purchase Tickets</span>
                   </div>
@@ -763,6 +766,7 @@
         <span id="ticketHistoryPage" class="me-1"></span>
         <span id="ticketHistoryNextPage" class="ico-arrowright p-1 hoverbg pointer"></span>
       </div>
+      <div id="noTicketsMessage" class="text-center p-2">No tickets to show</div>
     </form>
 
     {{- /* SET VOTES */ -}}
