--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -262,6 +262,16 @@
                 </div>
               </div>
 
+              {{- /* MM RUNNING */ -}}
+              <div class="d-hide fs15 pt-1 pb-3 text-center brdrbottom" id="mmRunning">
+                <div class="p-0 w-100">
+                  <div class="d-flex flex-column justify-content-center align-items-center">
+                    <span class="p-3 flex-center fs16 grey">[[[market_making_running]]]</span>
+                    <p class="text-center fs14 p-2 m-0">[[[cannot_manually_trade]]]</p>
+                  </div>
+                </div>
+              </div>
+
               {{- /* ORDER FORM */ -}}
               <form id="orderForm" class="p-3 d-hide">
                 <div class="p-0 w-100">
