martonp review followup

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -284,12 +284,12 @@
                     <div>
                       [[[:title:lot_size]]]:
                       <span id="lotSize"></span>
-                      <span data-unit="base"></span>
+                      <span data-unit="base" data-unit-format="noparent"></span>
                     </div>
                     <div>
                       [[[Rate Step]]]:
                       <span id="rateStep"></span>
-                      <span data-unit="quote"></span>
+                      <span data-unit="quote" data-unit-format="noparent"></span>
                     </div>
                   </div>
                   <div class="my-2 fs14 h21" id="maxBox">
