--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -47,24 +47,27 @@
     </form>
 
     {{- /* BOND DETAILS */ -}}
-    <form id="bondDetailsForm" autocomplete="off">
+    <form class="d-hide" id="bondDetailsForm" autocomplete="off">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 fs28 text-center sans-light">[[[bond_details]]]</div>
       <div class="d-flex justify-content-between my-3">
         <span class="text-center">
           [[[current_tier]]]
+          <span class="ico-info" data-tooltip="[[[current_tier_tooltip]]]"></span>
           <br>
-          <span id="currentTier"></span>
+          <span id="currentTier">10</span>
         </span>
         <span class="text-center"> 
           [[[pending_bonds]]]
+          <span class="ico-info" data-tooltip="[[[pending_bonds_tooltip]]]"></span>
           <br>
-          <span id="pendingBonds"></span>
+          <span id="pendingBonds">10</span>
         </span>
         <span class="text-center">
           [[[expired_bonds]]]
+          <span class="ico-info" data-tooltip="[[[expired_bonds_tooltip]]]"></span>
           <br>
-          <span id="expiredBonds"></span>
+          <span id="expiredBonds">10</span>
         </span>
       </div>
       <div class="fs18 mt-2">[[[bond_options]]]:</div>
