enable changing of vsp. martonp and joegruff reviews

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -225,6 +225,16 @@
   #purchaserInput {
     width: 4em;
   }
+
+  #vspDisplay {
+    #vspEditIcon {
+      display: none;
+    }
+
+    &:hover #vspEditIcon {
+      display: inline;
+    }
+  }
 }
 
 @include media-breakpoint-up(xxl) {
