--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -151,7 +151,10 @@
                     </div>
                     <div id="vspDisplayBox" class="d-flex justify-content-between align-items-stretch">
                       <div class="flex-center grey">VSP</div>
-                      <div id="vspDisplay" class="flex-center demi"></div>
+                      <div id="vspDisplay" class="flex-center demi pointer hoverbg">
+                        <span id="vspEditIcon" class="ico-edit me-2"></span>
+                        <span id="vspURL"></span>
+                      </div>
                     </div>
                     <div id="pickVSP" class="fs16 p-2 flex-center">
                       <button id="showVSPs" class="fs15 hoverbg p-1">Select a Voting Service Provider</button>
