--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -9,7 +9,10 @@
     {{- /* ASSET SELECT */ -}}
     <div class="d-flex flex-column align-items-stretch stylish-overflow invisible" id="assetSelect">
       <div id="iconSelectTmpl" class="icon-select d-flex align-items-stretch">
-        <img data-tmpl="img">
+        <div class="position-relative overflow-visible">
+          <img data-tmpl="img">
+          <img data-tmpl="parentImg" class="d-hide">
+        </div>
         <div class="d-none d-md-flex flex-column justify-content-around ps-2">
           <span class="fs15 lh1 text-nowrap" data-tmpl="name"></span>
           <span class="fs15 lh1" data-tmpl="balance"></span>
@@ -26,7 +29,12 @@
           <div class="my-auto w-100 flex-center flex-column py-3">
             <div class="flex-center">
               <img id="assetLogo">
-              <div class="ms-2 fs28 sans-light" id="assetName" data-asset-name="1"></div>
+              <div class="ms-2 fs28 sans-light lh1" id="assetName" data-asset-name="1"></div>
+            </div>
+            <div id="tokenParentBox" class="flex-center fs18 sans" class="fs16 d-hide">
+              <span>[[[Token on]]]</span>
+              <img id="tokenParentLogo" class="ms-1">
+              <span id="tokenParentName"></span>
             </div>
             <div id="createWalletBox" class="my-2">
               <button class="py-1 px-2 hoverbg fs18" id="createWallet">[[[create_a_x_wallet]]]</button>
@@ -265,13 +273,13 @@
                 </thead>
                 <tbody id="recentOrders">
                   <tr id="recentOrderTmpl">
-                    <td data-tmpl="trade" class="text-nowrap">
+                    <td data-tmpl="trade" class="text-nowrap flex-center">
                       <span data-tmpl="fromQty"></span>
-                      <img data-tmpl="fromLogo" class="micro-icon">
+                      <img data-tmpl="fromLogo" class="micro-icon mx-1">
                       <span data-tmpl="fromSymbol" class="d-none d-md-inline"></span>
                       <span>&rarr;</span>
                       <span data-tmpl="toQty"></span>
-                      <img data-tmpl="toLogo" class="micro-icon">
+                      <img data-tmpl="toLogo" class="micro-icon mx-1">
                       <span data-tmpl="toSymbol" class="d-none d-md-inline"></span>
                     </td>
                     <td data-tmpl="status"></td>
@@ -309,10 +317,15 @@
     {{- /* SEND */ -}}
     <form class="pb-3 d-hide" id="sendForm" autocomplete="off">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
-      <div class="py-1 text-center position-relative fs22 sans-light">
+      <div class="py-1 flex-center position-relative fs24 sans-light">
         [[[Send]]]
-        <img id="sendLogo" class="micro-icon mx-1">
+        <img id="sendLogo" class="mini-icon mx-2">
         <span id="sendName"></span>
+      </div>
+      <div class="flex-center pt-1 d-hide fs18 sans" id="sendTokenMsgBox">
+        <span>[[[Token on]]]</span>
+        <img id="sendTokenParentLogo" class="ms-1 micro-icon">
+        <span id="sendTokenParentName"></span>
       </div>
       <div class="mt-3">
         <label for="sendAddr" class="form-label ps-1 mb-1">[[[Address]]]</label>
