--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -50,25 +50,42 @@
     <form class="d-hide" id="bondDetailsForm" autocomplete="off">
       <div class="form-closer hoverbg"><span class="ico-cross"></span></div>
       <div class="py-1 fs28 text-center sans-light">[[[bond_details]]]</div>
-      <div class="d-flex justify-content-between my-3">
+      <div class="d-flex justify-content-around my-3">
         <span class="text-center">
           [[[current_tier]]]
           <span class="ico-info" data-tooltip="[[[current_tier_tooltip]]]"></span>
           <br>
-          <span id="currentTier">10</span>
-        </span>
-        <span class="text-center"> 
-          [[[pending_bonds]]]
-          <span class="ico-info" data-tooltip="[[[pending_bonds_tooltip]]]"></span>
-          <br>
-          <span id="pendingBonds">10</span>
+          <span id="currentTier"></span>
         </span>
         <span class="text-center">
-          [[[expired_bonds]]]
-          <span class="ico-info" data-tooltip="[[[expired_bonds_tooltip]]]"></span>
+          [[[current_target_tier]]]
+          <span class="ico-info" data-tooltip="[[[current_target_tier_tooltip]]]"></span>
           <br>
-          <span id="expiredBonds">10</span>
+          <span id="currentTargetTier"></span>
         </span>
+      </div>
+      <div class="d-flex justify-content-around my-3">
+        <span class="text-center">
+          [[[bond_cost]]]
+          <span class="ico-info" data-tooltip="[[[bond_cost_tooltip]]]"></span>
+          <br>
+          <span id="bondCost"></span>
+          <span class="bondAssetSym mx-2"></span>
+          <br>
+          <span class="d-flex d-hide justify-content-center grey fs14">
+            ~<span id="bondCostFiat" class="mx-1"></span>USD
+          </span>
+        </span>
+        <span class="text-center justify-content-center">
+          [[[bond_reservations]]]
+          <span class="ico-info" data-tooltip="[[[bond_reservations_tooltip]]]"></span>
+          <br>
+          <span id="bondReservationAmt"></span>
+          <span class="bondAssetSym mx-2"></span>
+          <br>
+          <span class="d-flex d-hide justify-content-center grey fs14">
+            ~<span id="bondReservationAmtFiat" class="mx-1"></span>USD
+          </span>
       </div>
       <div class="fs18 mt-2">[[[bond_options]]]:</div>
       <div class="selectBondAsset py-1">
